--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "league/mime-type-detection": "^1.9",
         "livewire/livewire": "^3.4"
     },
     "require-dev": {
@@ -60,7 +61,8 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
-        }
+        },
+        "disable-tls": true
     },
     "minimum-stability": "stable",
     "prefer-stable": true
